# apidiom

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile  LICENSE  README.md  github-mcp.js  github-repos-mcp.js  netlify.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
.claude/plans/: openapi-to-mcp.md
.claude/skills/apidiom-features/: SKILL.md
.claude/skills/apidiom-style/: SKILL.md
.claude/skills/openapi-to-mcp/: SKILL.md
.github/workflows/: ci.yml  release.yml
.omo/evidence/: apidiom-release-readiness-code-review.md
archive/python/: README.md  pyproject.toml
archive/python/tests/: test_codegen.py  test_docs_sidebar_styles.py  test_enrichment.py  test_langchain_gen.py  test_mcp_codegen.py  test_merge.py  test_openapi_ingest.py  test_pipeline.py  test_prompts.py  test_provider.py  test_web_app.py
archive/python/tests/fixtures/: petstore.json
docs/: astro.config.mjs  inspect-tmp.mjs  package-lock.json  package.json
docs/src/components/: Head.astro  SidebarSublist.astro  ThemeSelect.astro
docs/src/content/docs/: index.mdx  mcp-server.mdx  providers-privacy.mdx  quickstart.mdx  schema-export.mdx  troubleshooting.mdx  unverified-fields.mdx  web-ui.mdx
docs/src/pages/: index.astro
docs/src/styles/: custom.css
scripts/: pack-smoke.cjs
src/apidiom/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
src/apidiom/generate/: __init__.py  codegen.py  endpoint_utils.py  enrichment.py  langchain_gen.py  mcp.py  schema_gen.py
src/apidiom/generate/templates/: httpx_client.py.j2  langchain_tools.py.j2  mcp_server.py.j2
src/apidiom/ingest/: __init__.py  discovery.py  doc_to_spec.py  merge.py  openapi_ingest.py
src/apidiom/llm/: agent_model.py  gemini.py  null.py  ollama_provider.py  prompts.py  provider.py
src/apidiom/mcp/: server.py
src/apidiom/output/: __init__.py  writer.py
src/apidiom/web/: __init__.py  app.py
src/apidiom/web/static/: styles.css
src/apidiom/web/templates/: index.html  result.html
tests/: test_agent_model.py  test_cli.py  test_cli_generate.py  test_cli_module.py  test_cli_provider.py  test_codegen.py  test_discovery.py  test_doc_to_spec.py  test_generated_agent_outputs.py  test_input_kind_parity.py  test_mcp_codegen.py  test_mcp_server.py  test_openapi_ingest.py  test_pipeline.py  test_provider.py  test_schema_gen.py  test_web_app.py  test_writer.py
tests/fixtures/: invalid-openapi.txt  invalid.yaml  petstore.yaml  validation_failure.yaml
ts/: auth.ts  cli.ts  config.ts  model.ts  pipeline.ts  registry.json  registry.ts
ts-tests/: auth.test.ts  cli.test.ts  config.test.ts  registry.test.ts
ts-tests/fixtures/: petstore.yaml
ts-tests/generate/: mcp.test.ts  schema.test.ts  search.test.ts
ts-tests/ingest/: fetch.test.ts  parse.test.ts  resolve.test.ts
ts/generate/: mcp.ts  schema.ts  search.ts  tools.ts
ts/ingest/: fetch.ts  parse.ts  resolve.ts
