[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apidiom"
version = "0.1.0"
description = "Turn API documentation into idiomatic, type-safe API clients."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Apidiom contributors" }]
dependencies = [
    "click>=8,<9",
    "openapi-spec-validator>=0.7,<1",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1,<2",
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "pytest-mock>=3,<4",
    "ruff>=0.8,<1",
]

[project.scripts]
apidiom = "apidiom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest-tmp",
    ".pytest_cache",
    ".ruff_cache",
    ".tmp",
    ".venv",
    ".venv313",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["apidiom"]

[[tool.mypy.overrides]]
module = ["openapi_spec_validator", "yaml"]
ignore_missing_imports = true
