[build-system]
requires = ["setuptools>=69,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apidiom"
version = "0.1.0"
description = "Turn API documentation into idiomatic, type-safe API clients."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Apidiom contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4>=4,<5",
    "click>=8,<9",
    "jinja2>=3,<4",
    "lxml>=5,<7",
    "openapi-spec-validator>=0.7,<1",
    "pydantic>=2,<3",
    "pydantic-ai>=0.0.19,<1",
    "pyperclip>=1,<2",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
gemini = [
    "httpx>=0.28,<1",
]
ollama = [
    "httpx>=0.28,<1",
]
codegen = [
    "datamodel-code-generator>=0.28,<1",
]
web = [
    "fastapi>=0.115,<1",
    "python-multipart>=0.0.20,<1",
    "uvicorn>=0.34,<1",
]
mcp = [
    "mcp>=1,<2",
]
all = [
    "datamodel-code-generator>=0.28,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "mcp>=1,<2",
    "pydantic-ai>=0.0.19,<1",
    "python-multipart>=0.0.20,<1",
    "uvicorn>=0.34,<1",
]
dev = [
    "build>=1,<2",
    "datamodel-code-generator>=0.28,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "mcp>=1,<2",
    "mypy>=1,<2",
    "pre-commit>=4,<5",
    "pydantic-ai>=0.0.19,<1",
    "pytest>=8,<9",
    "pytest-mock>=3,<4",
    "python-multipart>=0.0.20,<1",
    "ruff>=0.8,<1",
    "twine>=6,<7",
    "uvicorn>=0.34,<1",
]

[project.scripts]
apidiom = "apidiom.cli:main"

[project.urls]
Homepage = "https://github.com/poyhi/apidiom"
Repository = "https://github.com/poyhi/apidiom"
Documentation = "https://poyhi.github.io/apidiom/"
Issues = "https://github.com/poyhi/apidiom/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apidiom = ["web/templates/*.html", "web/static/*.css", "generate/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest-tmp",
    ".pytest_cache",
    ".ruff_cache",
    ".tmp",
    ".venv",
    ".venv313",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/apidiom/llm/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["apidiom"]

[[tool.mypy.overrides]]
module = ["openapi_spec_validator", "pyperclip", "yaml"]
ignore_missing_imports = true
